[package]
name = "weather_d"
version = "0.1.0"
authors = ["kokonotsu"]
edition = "2018"

[dependencies]
gotham =  "0.3"
gotham_derive =  "0.3"

hyper = "0.12"
mime = "0.3"
futures = "0.1.26"
serde = "1"
serde_derive = "1"
tokio-core = "0.1"

tokio = "0.1"

uuid = "0.7.4"

http = "0.1"

serde_json = "1"

chrono = "0.4"

url = "1.7.2"
regex = "1"
xml-rs = "0.8.0"
ascii = "0.6.0"

magick_rust = { path = "../imma_rust/magick-rust" }

openssl = "0.10.20"
hex = "0.3.2"
rustc-serialize = "0.3"


base64 = "0.10.1"

[dependencies.resvg]
version = "0.6.1"
features = ["cairo-backend"]
